// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav bar component should render nav bar correctly 1`] = `
<div>
  <Navbar
    className="p-3 nav-bar"
    dark={true}
    expand="md"
    tag="nav"
  >
    <NavLink
      className="nav-title"
      to="/dashboard"
    >
      Questioner
    </NavLink>
    <NavbarToggler
      className="toggle"
      onClick={[Function]}
      tag="button"
      type="button"
    />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <NavLink
            className="nav-link"
            to="/admin"
          >
            Admin
          </NavLink>
        </NavItem>
        <NavItem
          tag="li"
        >
          <NavLink
            className="nav-link"
            to="/dashboard"
          >
            Dashboard
          </NavLink>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            color="secondary"
            nav={true}
          >
            <span>
              <img
                alt="user"
                className="rounded-circle"
                src={
                  Object {
                    "canInstrument": true,
                    "createTransformer": [Function],
                    "getCacheKey": [Function],
                    "process": [Function],
                  }
                }
                style={
                  Object {
                    "height": "3.5rem",
                    "objectFit": "contain",
                    "width": "3.5rem",
                  }
                }
              />
            </span>
          </DropdownToggle>
          <DropdownMenu
            className="p-3"
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              onClick={[Function]}
              tag="button"
              toggle={true}
            >
              Your profile
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              className="logout"
              onClick={[Function]}
              tag="button"
              toggle={true}
            >
              Sign Out
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
    </Collapse>
  </Navbar>
</div>
`;

exports[`Nav bar component should render nav bar correctly 2`] = `
<div>
  <Navbar
    className="p-3 nav-bar"
    dark={true}
    expand="md"
    tag="nav"
  >
    <NavLink
      className="nav-title"
      to="/dashboard"
    >
      Questioner
    </NavLink>
    <NavbarToggler
      className="toggle"
      onClick={[Function]}
      tag="button"
      type="button"
    />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={true}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <NavLink
            className="nav-link"
            to="/dashboard"
          >
            Dashboard
          </NavLink>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            color="secondary"
            nav={true}
          >
            <span>
              <img
                alt="user"
                className="rounded-circle"
                src={
                  Object {
                    "canInstrument": true,
                    "createTransformer": [Function],
                    "getCacheKey": [Function],
                    "process": [Function],
                  }
                }
                style={
                  Object {
                    "height": "3.5rem",
                    "objectFit": "contain",
                    "width": "3.5rem",
                  }
                }
              />
            </span>
          </DropdownToggle>
          <DropdownMenu
            className="p-3"
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              onClick={[Function]}
              tag="button"
              toggle={true}
            >
              Your profile
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              className="logout"
              onClick={[Function]}
              tag="button"
              toggle={true}
            >
              Sign Out
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
    </Collapse>
  </Navbar>
</div>
`;
